<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sartore.matteo.skatingscore.NewAthleteActivity"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/newath_scrollView"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="76dp">

            <TextView
                android:id="@+id/newath_lbltitle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/str_newGroup"
                android:textSize="50sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/newath_txtview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_insertGroupInfo"
                android:layout_below="@+id/newath_lbltitle"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/newath_edittxt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nome"
                android:inputType="textCapWords"
                android:layout_below="@id/newath_txtview1"/>

            <EditText
                android:id="@+id/newath_edittxt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_society"
                android:inputType="textCapWords"
                android:layout_below="@id/newath_edittxt1"/>

            <EditText
                android:id="@+id/newath_edittxt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_exhibitionTitle"
                android:inputType="textCapWords"
                android:layout_below="@id/newath_edittxt2"/>

            <TextView
                android:id="@+id/newath_txtview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_entryNo"
                android:paddingTop="15dp"
                android:layout_below="@id/newath_edittxt4"/>

            <EditText
                android:id="@+id/newath_edittxt3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_marginStart="13dp"
                android:layout_below="@id/newath_txtview2"/>
        </RelativeLayout>

    </ScrollView>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/newath_btn1"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:backgroundTint="#4CAF50"
        app:srcCompat="@drawable/ic_check_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"/>

</RelativeLayout>
